@@ -396,6 +396,22 @@ CDM::E_CDM_DTYPE cdm_DFI::GetDataType()
   return (CDM::E_CDM_DTYPE)DFI_Finfo.DataType;
 }
 
+// #################################################################
+// dfi種別の取り出し(文字列)
+std::string cdm_DFI::GetDFITypeString()
+{
+  if( DFI_Finfo.DFIType == CDM::E_CDM_DFITYPE_CARTESIAN ) return D_CDM_DFITYPE_CARTESIAN;
+  if( DFI_Finfo.DFIType == CDM::E_CDM_DFITYPE_NON_UNIFORM_CARTESIAN ) return D_CDM_DFITYPE_NON_UNIFORM_CARTESIAN;
+  return "";
+}
+
+// #################################################################
+// dfi種別の取り出し(e_num)
+CDM::E_CDM_DFITYPE cdm_DFI::GetDFIType()
+{
+  return (CDM::E_CDM_DFITYPE)DFI_Finfo.DFIType;
+}
+
 //FCONV 20140123.s
 // #################################################################
 // FileFormatの取り出し(文字列)
