@@ -130,10 +130,19 @@ bool CONV::CheckDFIdata()
   int *end;
 
   for( int i=0; i<m_in_dfi.size(); i++) {
-    //コンバート変数の個数のチェック
+    //不等間隔格子のデータをSPH形式かBOV形式で出力しようとしたらエラー
+    if( m_param->Get_OutputFormat() == CDM::E_CDM_FMT_SPH or 
+        m_param->Get_OutputFormat() == CDM::E_CDM_FMT_BOV ) {
+      if( m_in_dfi[i]->GetDFIType() == CDM::E_CDM_DFITYPE_NON_UNIFORM_CARTESIAN ) {
+        printf("\tCan't Convert Non-Uniform Cartesian data to SPH or BOV format.\n");
+        ierr=false;
+      }
+    }
+
+    //コンバート変数の個数のチェック(SPH形式)
     if( m_param->Get_OutputFormat() == CDM::E_CDM_FMT_SPH ) {
-      if( m_in_dfi[i]->GetNumVariables() > 3 ) {
-        printf("\tCan't Converter OutputFormat.\n");
+      if( m_in_dfi[i]->GetNumVariables() != 1 && m_in_dfi[i]->GetNumVariables() != 3 ) {
+        printf("\tCan't Convert to SPH format. Number of valiables is neither 1 nor 3.\n");
         ierr=false;
       }
     }
